--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
+  - docker build -t shashank/github-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true stephengrider/docker-react npm run test
-
-deploy:
-  provider: elasticbeanstalk
-  region: 'us-east-1'
-  app: 'docker'
-  env: 'docker-env'
-  bucket_name: 'elasticbeanstalk-us-east-1-923445559289'
-  bucket_path: 'docker'
-  on:
-    branch: master
+  - docker run shashank/github-react-react npm run test -- --coverage
